crates/cageforge-cli/tests/snapshots/cli__native_generic_failure.snap
---
source: crates/cageforge-cli/tests/cli.rs
expression: rendered
---
[macos_native_error] sandbox preparation failed: native setup failed
  --> <config.toml>:3:1
  profile: tool
  platform: macos
  command: /opt/tool/bin/runner --worker one
