crates/cageforge-cli/tests/snapshots/cli__native_invalid_executable_root.snap
---
source: crates/cageforge-cli/tests/cli.rs
expression: rendered
---
[macos_invalid_executable_root] configured executable runtime root is not an absolute safe path: "relative/runtime"
  --> <config.toml>:8:1
  profile: tool
  platform: macos
  command: /opt/tool/bin/runner --worker one
  field: runtime.executable_roots
