crates/cageforge-cli/tests/snapshots/cli__permission_list_output_is_snapshotted.snap
---
source: crates/cageforge-cli/tests/cli.rs
expression: normalized
---
<grant-id>	snapshot-tool	1.0.0	linux	x86_64	persistent	-
